--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,9 +1,9 @@
 Package:  mixlow
-Version:  0.01
+Version:  0.01.1
 Author:   John Boik <jboik@stanford.edu>
-Maintainer:  John Boik <jboik@stanford.edu>
+Maintainer: ORPHANED
 Depends: R (>= 2.5), nlme (>= 3.1.4)
 Description: mixlow software for assessing drug synergism/antagonism
 License:  GPL (version 2 or later)
 Title: mixlow method for assessing drug synergism
-Packaged: Tue Sep 30 00:44:34 2008; john
+Packaged: Mon Feb 23 11:44:08 2009; hornik
