--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,9 +1,11 @@
-Package:  mixlow
-Version:  0.01.1
-Author:   John Boik <jboik@stanford.edu>
-Maintainer: ORPHANED
+Package: mixlow
+Version: 0.01-2
+Author: John Boik <jcboik@stanford.edu>
+Maintainer: John Boik <jcboik@stanford.edu>
 Depends: R (>= 2.5), nlme (>= 3.1.4)
 Description: mixlow software for assessing drug synergism/antagonism
-License:  GPL (version 2 or later)
+License: GPL (>= 2)
 Title: mixlow method for assessing drug synergism
-Packaged: Mon Feb 23 11:44:08 2009; hornik
+Packaged: 2009-05-11 14:00:06 UTC; john
+Repository: CRAN
+Date/Publication: 2009-05-11 15:36:00
