--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,11 +1,12 @@
 Package: mixlow
-Version: 0.01-2
+Version: 0.02
+Date: 2009-12-01
 Author: John Boik <jcboik@stanford.edu>
 Maintainer: John Boik <jcboik@stanford.edu>
 Depends: R (>= 2.5), nlme (>= 3.1.4)
 Description: mixlow software for assessing drug synergism/antagonism
 License: GPL (>= 2)
 Title: mixlow method for assessing drug synergism
-Packaged: 2009-05-11 14:00:06 UTC; john
+Packaged: 2009-12-01 09:57:14 UTC; john
 Repository: CRAN
-Date/Publication: 2009-05-11 15:36:00
+Date/Publication: 2009-12-01 15:39:43
