--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,12 +1,12 @@
 Package: mixlow
-Version: 0.02
-Date: 2009-12-01
+Version: 0.02.1
+Date: 2010-2-15
 Author: John Boik <jcboik@stanford.edu>
 Maintainer: John Boik <jcboik@stanford.edu>
 Depends: R (>= 2.5), nlme (>= 3.1.4)
 Description: mixlow software for assessing drug synergism/antagonism
 License: GPL (>= 2)
 Title: mixlow method for assessing drug synergism
-Packaged: 2009-12-01 09:57:14 UTC; john
+Packaged: Mon Feb 15 23:48:56 2010; john
 Repository: CRAN
-Date/Publication: 2009-12-01 15:39:43
+Date/Publication: 2010-02-16 09:36:48
