--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,12 +1,12 @@
 Package: mixlow
-Version: 0.02.1
-Date: 2010-2-15
-Author: John Boik <jcboik@stanford.edu>
-Maintainer: John Boik <jcboik@stanford.edu>
+Version: 1.0.0
+Date: 2010-04-16
+Author: John Boik <john.boik@newearthbiomed.org>
+Maintainer: John Boik <john.boik@newearthbiomed.org>
 Depends: R (>= 2.5), nlme (>= 3.1.4)
 Description: mixlow software for assessing drug synergism/antagonism
 License: GPL (>= 2)
-Title: mixlow method for assessing drug synergism
-Packaged: Mon Feb 15 23:48:56 2010; john
+Title: Mixlow Method for Assessing Drug Synergism/Antagonism
+Packaged: 2010-04-16 21:30:50 UTC; zeileis
 Repository: CRAN
-Date/Publication: 2010-02-16 09:36:48
+Date/Publication: 2010-04-17 05:13:22
