--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,12 +1,12 @@
 Package: mixlow
-Version: 1.0.0
-Date: 2010-04-16
+Version: 1.0.1
+Date: 2012-3-20
 Author: John Boik <john.boik@newearthbiomed.org>
 Maintainer: John Boik <john.boik@newearthbiomed.org>
-Depends: R (>= 2.5), nlme (>= 3.1.4)
+Depends: R (>= 2.10), nlme (>= 3.1.4)
 Description: mixlow software for assessing drug synergism/antagonism
 License: GPL (>= 2)
-Title: Mixlow Method for Assessing Drug Synergism/Antagonism
-Packaged: 2010-04-16 21:30:50 UTC; zeileis
+Title: mixlow method for assessing drug synergism
+Packaged: 2012-03-22 16:43:37 UTC; john
 Repository: CRAN
-Date/Publication: 2010-04-17 05:13:22
+Date/Publication: 2012-03-22 21:16:36
